[package]
name = "pornvir"
version = "0.1.0"
edition = "2021"

[lib]
name = "libpornvir"
path = "src/com/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "pornvir"
path = "src/main.rs"

[dependencies]
image = "0.24.8"
# anyhow = "1.0.79"
# enigo = "0.1.3"
# rand = "0.8.5"
# reqwest = "0.11.24"
# tokio = { version = "1.36.0", features = ["full"] }

[dependencies.windows]
version = "0.52.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Graphics_Gdi"
]
